--- a/main/refer.html
+++ b/main/refer.html
@@ -872,8 +872,8 @@
                                                     </svg>
                                                 </div>
                                             </div>
-                                            
-                                            <div class="input-wrapper">
+                                            <div class="twingroup">
+                                            <div class="input-wrapper twin">
                                                     <input data-parsley-trigger="change" data-parsley-error-message="DVA Card Colour required." type="text" name="patient dva colour" title="Patient's DVA Card Colour" id="pdvacolour" value="" aria-required="false" class="form__input">
                                                     <label class="form__label" for="pdvacolour">DVA Colour
                                                         <svg class="form__valid" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="611.983px" height="611.983px" viewBox="0 0 611.983 611.983" style="enable-background:new 0 0 611.983 611.983;" xml:space="preserve">
@@ -895,7 +895,7 @@
                                                         </g>
                                                     </svg>
                                                 </div>
-
+</div>
                                             <div class="input-wrapper">
                                                 <input data-parsley-trigger="change" data-parsley-error-message="Address is required." type="text" name="patient address 1" title="Patient's Address 1" id="paddress1" value="" aria-required="true" required="" class="form__input">
                                                 <label class="form__label reqstar" for="paddress1">Address 1
