--- a/main/book.html
+++ b/main/book.html
@@ -865,7 +865,7 @@
                                                 </div>
                                             </div>
 
-                                            <div class="input-wrapper autocomplete">
+                                            <!--<div class="input-wrapper autocomplete">
                                                 <input data-parsley-trigger="change" data-parsley-error-message="Preferred day required." type="text" name="preferred day" title="Preferred Day" id="prefday" value="" aria-required="true" class="form__input" required>
                                                 <label class="form__label reqstar" for="prefday">Preferred Day
                                                     <svg class="form__valid" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="611.983px" height="611.983px" viewBox="0 0 611.983 611.983" style="enable-background:new 0 0 611.983 611.983;" xml:space="preserve">
@@ -886,7 +886,7 @@
                     C38.25,158.125,158.125,38.25,306,38.25c147.875,0,267.75,119.875,267.75,267.75C573.75,453.875,453.875,573.75,306,573.75z" />
                                                     </g>
                                                 </svg>
-                                            </div>
+                                            </div>-->
 
                                             <div class="input-wrapper">
                                                 <input data-parsley-trigger="change" data-parsley-error-message="Preferred time required." type="text" name="preferred time" title="Preferred Time" id="preftime" value="" aria-required="true" class="form__input" required>
