--- a/main/book.html
+++ b/main/book.html
@@ -1112,6 +1112,34 @@
 });*/
         }
 
+        function formatDate1(userDate1) {
+
+            var userDate1 = document.getElementById('medidvaexp').value;
+            var rawDate_array1 = [],
+                newDate_array1 = [];
+            var month1, day1, year1, reformattedDate1;
+
+            for (i = 0; i < userDate1.length; i++) {
+                if (userDate1[i] != "/") {
+                    rawDate_array1.push(userDate1[i]);
+                }
+            }
+            month1 = rawDate_array1.slice(2, 4).join("");
+            day1 = rawDate_array1.slice(0, 2).join("");
+            year1 = rawDate_array1.slice(4, 8).join("");
+            newDate_array1.push(year1, month1, day1);
+            reformattedDate1 = newDate_array1.join("-");
+
+            /*document.getElementById("outputDate").innerHTML = reformattedDate;*/
+
+            $("#medidvaexp").change(function() {
+                $("#outputDate1").val(reformattedDate1);
+            });
+            /*$("#date").on('change', function () {
+    $("#outputDate").val(reformattedDate);
+});*/
+        }
+
     </script>
     <script>
         (function($) {
