--- a/main/dfeedback.html
+++ b/main/dfeedback.html
@@ -776,6 +776,8 @@
                                                 <input type="radio" name="fbcontent" value="Unsatisfactory Diagnosis " class="" id="unsatdiagradio" data-parsley-multiple="fblink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="unsatdiagradio" class="textc">Unsatisfactory Diagnosis</label><br>
                                                 <input type="radio" name="fbcontent" value="Unsatisfactory Communication " class="" id="unsatcommradio" data-parsley-multiple="fblink" data-parsley-required data-parsley-error-message="Please choose 1" />
+                                                <label for="unsatcommradio" class="textc">Unsatisfactory Communication</label><br>
+                                                <input type="radio" name="fbcontent" value="Unsatisfactory Communication " class="" id="unsatcommradio" data-parsley-multiple="fblink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="unsatcommradio" class="textc">Unsatisfactory Communication</label>
                                             </div>
                                             
