--- a/main/dfeedback.html
+++ b/main/dfeedback.html
@@ -777,7 +777,7 @@
                                                 <label for="unsatdiagradio" class="textc">Unsatisfactory Diagnosis</label><br>
                                                 <input type="radio" name="fbcontent" value="Unsatisfactory Communication " class="" id="unsatcommradio" data-parsley-multiple="fblink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="unsatcommradio" class="textc">Unsatisfactory Communication</label><br>
-                                                <input type="radio" name="fbcontent" value="Other " class="" id="unsatcommradio" data-parsley-multiple="fblink" data-parsley-required data-parsley-error-message="Please choose 1" />
+                                                <input type="radio" name="fbcontent" value="Other " class="" id="other" data-parsley-multiple="fblink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="unsatcommradio" class="textc">Other</label>
                                             </div>
                                             
