--- a/main/dfeedback.html
+++ b/main/dfeedback.html
@@ -778,7 +778,7 @@
                                                 <input type="radio" name="fbcontent" value="Unsatisfactory Communication " class="" id="unsatcommradio" data-parsley-multiple="fblink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="unsatcommradio" class="textc">Unsatisfactory Communication</label><br>
                                                 <input type="radio" name="fbcontent" value="Other " class="" id="otherradio" data-parsley-multiple="fblink" data-parsley-required data-parsley-error-message="Please choose 1" />
-                                                <label for="unsatcommradio" class="textc">Other</label>
+                                                <label for="otherradio" class="textc">Other</label>
                                             </div>
                                             
                                             <p class="mt-3 textc reqstar">Rating of Service</p>
