--- a/main/index.html
+++ b/main/index.html
@@ -477,7 +477,7 @@
                         </div>
                     </div>
                     <div class="feature__media">
-                        <img class="flip" src="assets/img/Consulting.png">
+                        <img class="" src="assets/img/Consulting%201-3.png">
                         <!--<figure>
                             <svg width="620" height="420" viewBox="0 0 620 420" preserveAspectRatio="xMinYMin slice">
                                 <rect width="620" height="420" fill="var(--color-contrast-lower)" />
