--- a/main/refer.html
+++ b/main/refer.html
@@ -850,7 +850,7 @@
 
                                                 <div class="input-wrapper twin">
                                                     <input data-parsley-trigger="change" data-parsley-error-message="Medicare/DVA Expiry required." type="text" title="Patient's Medicare/DVA date of expiry" id="medidvaexp" value="" aria-required="true" required="" class="form__input" oninput="formatDate1()">
-                                                    <input id="outputDate1" type="date" name="patient dob" value="" style="display: none">
+                                                    <input id="outputDate1" type="date" name="medicare/dva expiry" value="" style="display: none">
                                                     <label class="form__label reqstar" for="medidvaexp">Card Expiry (dd/mm/yyyy)
                                                         <svg class="form__valid" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="611.983px" height="611.983px" viewBox="0 0 611.983 611.983" style="enable-background:new 0 0 611.983 611.983;" xml:space="preserve">
                                                             <g>
