--- a/main/index.html
+++ b/main/index.html
@@ -507,7 +507,7 @@
                     </div>
 
                     <div class="feature__media">
-                        <img class="flip" src="assets/img/Echocardiography.png">
+                        <img class="flip" src="assets/img/Echocardiography1.png">
                         <!--<figure>
                             <svg width="620" height="420" viewBox="0 0 620 420" preserveAspectRatio="xMinYMin slice">
                                 <rect width="620" height="420" fill="var(--color-contrast-lower)" />
@@ -536,7 +536,7 @@
                         </div>
                     </div>
                     <div class="feature__media">
-                        <img class="flip" src="assets/img/services_0004_Stress-Test.png">
+                        <img class="flip" src="assets/img/services_0004_Stress-Test%201.png">
                         <!--<figure>
                             <svg width="620" height="420" viewBox="0 0 620 420" preserveAspectRatio="xMinYMin slice">
                                 <rect width="620" height="420" fill="var(--color-contrast-lower)" />
