--- a/main/refer.html
+++ b/main/refer.html
@@ -848,7 +848,7 @@
                                                     </svg>
                                                 </div>
 
-                                                <div class="input-wrapper twin">
+                                                <!--<div class="input-wrapper twin">
                                                     <input data-parsley-trigger="change" data-parsley-error-message="Medicare/DVA Expiry required." type="text" title="Patient's Medicare/DVA date of expiry" id="medidvaexp" value="" aria-required="true" required="" class="form__input" oninput="formatDate1()">
                                                     <input id="outputDate1" type="date" name="medicare/dva expiry" value="" style="display: none">
                                                     <label class="form__label reqstar" for="medidvaexp">Card Expiry (dd/mm/yyyy)
@@ -870,7 +870,8 @@
                     C38.25,158.125,158.125,38.25,306,38.25c147.875,0,267.75,119.875,267.75,267.75C573.75,453.875,453.875,573.75,306,573.75z" />
                                                         </g>
                                                     </svg>
-                                                </div>
+                                                </div>-->
+                                                
                                                 <div class="input-wrapper twin">
                                                     <input data-parsley-trigger="change" data-parsley-error-message="Medicare/DVA Expiry required." type="text" name="Patient's Medicare/DVA date of expiry" title="Patient's Medicare/DVA Card Expiry" id="medidvaexp" value="" aria-required="true" required="" class="form__input">
                                                     <label class="form__label reqstar" for="medidvaexp">Card Expiry
