--- a/main/refer.html
+++ b/main/refer.html
@@ -1211,7 +1211,7 @@
                                                 </svg>
                                             </div>
                                             <div class="input-wrapper">
-                                                <input data-parsley-trigger="keyup" data-parsley-error-message="Fax number required." type="text" name="ref dr fax" title="Fax" id="dfax" value="" aria-required="false" class="form__input" maxlength="9">
+                                                <input data-parsley-trigger="keyup" data-parsley-error-message="Fax number required." type="text" name="ref dr fax" title="Fax" id="dfax" value="" aria-required="true" required class="form__input" maxlength="9">
                                                 <label class="form__label" for="dfax">Fax
                                                     <svg class="form__valid" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="611.983px" height="611.983px" viewBox="0 0 611.983 611.983" style="enable-background:new 0 0 611.983 611.983;" xml:space="preserve">
                                                         <g>
