--- a/main/refer.html
+++ b/main/refer.html
@@ -547,7 +547,7 @@
                 <div class="col-12 col-sm-10 pt-5 text3 container container--adaptive">
                     <p class="textp1">
                         MCS welcomes new patients. If you are a GP and wish to refer a patient to us, please fill out the form below. Alternatively, we have PDF forms which you can download and email back to us.<br><br>
-                        <a href="assets/public/MCS%20Request%20Form%20(Interactive).pdf" download class="textlink"><i class="fas fa-file-download"></i> Request Form (Interactive)</a><br><br>
+                        <a href="assets/public/MCS%20Request%20Form%20(Interactive).pdf" download class="textlink"><i class="fas fa-file-download"></i> Request Form (Interactive) (Adobe Acrobat Only)</a><br><br>
                         <a href="assets/public/MCS%20Request%20Form%20(Print).pdf" download class="textlink"><i class="fas fa-file-download"></i> Request Form (Print)</a>
                     </p>
                     <hr style="border: 1px solid var(--color-contrast-higher)" class="mt-5">
