--- a/main/about.html
+++ b/main/about.html
@@ -503,7 +503,7 @@
                                 <div class="feature__text-inner">
                                     <div class="text-component text">
                                         <small class="feature__label margin-bottom--xs">Our Team</small>
-                                        <h2 class="text" data-splitting>Larry Ponnuthurai</h2>
+                                        <h2 class="text" data-splitting>Dr F A (Larry) Ponnuthurai</h2>
                                         <p class="textp mt-3">Interventional Cardiologist</p>
                                     </div>
 
