--- a/main/about.html
+++ b/main/about.html
@@ -692,7 +692,7 @@
                                 <img src="assets/img/Larry1.png" style="max-height: 200px; width: auto; margin-left: auto; margin-right: auto;">
                             </div>
                             <div class="col-sm-6 col-xs-12 shrinkcentre">
-                                <h4 class="text black mt-2">Larry Ponnuthurai</h4>
+                                <h4 class="text black mt-2">Dr F A (Larry) Ponnuthurai</h4>
                                 <p class="text12" style="color: var(--color-contrast-medium);">MBBCh FRACP FCSANZ DDU</p>
                                 <p class="text12 mt-2">Deputy Director of Cardiology - Northern Health</p>
                                 <p class="text12 mt-2">Head of Cathlab - Northern Health</p>
