--- a/main/refer.html
+++ b/main/refer.html
@@ -1054,14 +1054,14 @@
                                                 <div class="twin-wrapper twin" style="border: 2px solid green">
                                                     <p class="mt-3 textc reqstar">Stress Echo Criteria</p>
                                                     <div>
-                                                        <input type="checkbox" name="echo" value="echo " class="qcheck" id="echocheck" data-parsley-multiple="investigationrequiredlink" data-parsley-error-message="At least 1 selection is required." />
-                                                        <label for="echocheck" class="textc">Echocardiography</label><br>
-                                                        <input type="checkbox" name="stress echo" value="stressecho " class="qcheck" id="stressechocheck" data-parsley-multiple="investigationrequiredlink" data-parsley-mincheck="1" data-parsley-required data-parsley-error-message="Please choose at least 1" />
-                                                        <label for="stressechocheck" class="textc">Stress Echocardiography</label><br>
-                                                        <input type="checkbox" name="holter" value="holter " class="qcheck" id="holtercheck" data-parsley-multiple="investigationrequiredlink" data-parsley-mincheck="1" data-parsley-required data-parsley-error-message="Please choose at least 1" />
-                                                        <label for="holtercheck" class="textc">Holter Monitoring</label><br>
-                                                        <input type="checkbox" name="consult" value="consult " class="qcheck" id="consultcheck" data-parsley-multiple="investigationrequiredlink" data-parsley-mincheck="1" data-parsley-required data-parsley-error-message="Please choose at least 1" />
-                                                        <label for="consultcheck" class="textc">Consultation</label>
+                                                        <input type="checkbox" name="blah1" value="blah1 " class="qcheck" id="blahcheck1" data-parsley-multiple="investigationrequiredlink1" data-parsley-error-message="At least 1 selection is required." />
+                                                        <label for="blahcheck1" class="textc">Blah</label><br>
+                                                        <input type="checkbox" name="blah2" value="blah2 " class="qcheck" id="blahcheck2" data-parsley-multiple="investigationrequiredlink1" data-parsley-mincheck="1" data-parsley-required data-parsley-error-message="Please choose at least 1" />
+                                                        <label for="blahcheck2" class="textc">Blah</label><br>
+                                                        <input type="checkbox" name="blah3" value="blah3 " class="qcheck" id="blahcheck3" data-parsley-multiple="investigationrequiredlink1" data-parsley-mincheck="1" data-parsley-required data-parsley-error-message="Please choose at least 1" />
+                                                        <label for="blahcheck3" class="textc">Blah</label><br>
+                                                        <input type="checkbox" name="blah4" value="blah4 " class="qcheck" id="blahcheck4" data-parsley-multiple="investigationrequiredlink1" data-parsley-mincheck="1" data-parsley-required data-parsley-error-message="Please choose at least 1" />
+                                                        <label for="blahcheck4" class="textc">Blah</label>
                                                     </div>
                                                 </div>
                                             </div>
