--- a/main/refer.html
+++ b/main/refer.html
@@ -1052,7 +1052,7 @@
                                                     </div>
                                                 </div>
                                                 <div class="twin-wrapper twin" style="border: 2px solid green">
-                                                    <p class="mt-3 textc reqstar">Stress Echo Criteria</p>
+                                                    <p class="mt-3 textc reqstar">Stress Echocardiography Criteria</p>
                                                     <div>
                                                         <input type="checkbox" name="blah1" value="blah1 " class="qcheck" id="blahcheck1" data-parsley-multiple="investigationrequiredlink1" data-parsley-error-message="At least 1 selection is required." />
                                                         <label for="blahcheck1" class="textc">Blah</label><br>
