--- a/main/refer.html
+++ b/main/refer.html
@@ -1043,7 +1043,7 @@
                                                     <div>
                                                         <input type="checkbox" name="echo" value="echo " class="qcheck" id="echocheck" data-parsley-multiple="investigationrequiredlink" data-parsley-error-message="At least 1 selection is required." />
                                                         <label for="echocheck" class="textc">Echocardiography</label><br>
-                                                        <input onclick="stressechofunc()" type="checkbox" name="stress echo" value="stressecho " class="qcheck" id="stressechocheck" data-parsley-multiple="investigationrequiredlink" data-parsley-mincheck="1" data-parsley-required data-parsley-error-message="Please choose at least 1" />
+                                                        <input oninput="stressechofunc()" type="checkbox" name="stress echo" value="stressecho " class="qcheck" id="stressechocheck" data-parsley-multiple="investigationrequiredlink" data-parsley-mincheck="1" data-parsley-required data-parsley-error-message="Please choose at least 1" />
                                                         <label for="stressechocheck" class="textc">Stress Echocardiography</label><br>
                                                         <input type="checkbox" name="holter" value="holter " class="qcheck" id="holtercheck" data-parsley-multiple="investigationrequiredlink" data-parsley-mincheck="1" data-parsley-required data-parsley-error-message="Please choose at least 1" />
                                                         <label for="holtercheck" class="textc">Holter Monitoring</label><br>
@@ -1051,7 +1051,7 @@
                                                         <label for="consultcheck" class="textc">Consultation</label>
                                                     </div>
                                                 </div>
-                                                <div class="twin-wrapper twin" style="border: 2px solid green">
+                                                <div class="twin-wrapper twin" style="border: 2px solid green; display: none">
                                                     <p class="mt-3 textc reqstar">Stress Echocardiography Criteria</p>
                                                     <div>
                                                         <input type="checkbox" name="blah1" value="blah1 " class="qcheck" id="blahcheck1" data-parsley-multiple="investigationrequiredlink1" data-parsley-error-message="At least 1 selection is required." />
