--- a/main/index.html
+++ b/main/index.html
@@ -439,7 +439,7 @@
                         <li><a href="services/">Services</a></li>
                         <li><a href="locations/">Locations</a></li>
                         <li><a href="contact">Contact</a></li>
-                        <li><a href="refer">Practitioners</a></li>
+                        <li><a href="refer">Refer Patient</a></li>
                     </ul>
                 </nav>
             </div>
