--- a/main/index.html
+++ b/main/index.html
@@ -410,7 +410,7 @@
                             <li class="menu-item"><a href="contact">General Enquiries</a></li>
                         </ol>
                     </li>
-                    <li class="menu-item dtmenuitem"><a href="refer" class="boldbtn">Refer a Patient</a></li>
+                    <li class="menu-item dtmenuitem"><a href="refer" class="boldbtn">Refer Online</a></li>
                     <!--<li class="menu-item dtmenuitem">
                         <a href="search">
                             <svg class="icon" viewBox="0 0 20 20" aria-label="Toggle search">
