--- a/main/index.html
+++ b/main/index.html
@@ -450,8 +450,11 @@
                 <div class="hometitle">
                     <span class="text">Melbourne Cardiology Services</span>
                     <br>
-                    <br>
                     <h5 class="text1 ml12">Excellence. Integrity. Quality.</h5>
+                    <div id="button1">
+                        <a class="mybtn link text3" href="refer"><span>Refer a Patient</span></a>
+                        <!--<a class="mybtn1 mybtn1--gradient link text3" href="book"><span>Book an Appointment</span></a>-->
+                    </div>
                     <div id="button1">
                         <a class="mybtn link text3" href="refer"><span>Refer a Patient</span></a>
                         <!--<a class="mybtn1 mybtn1--gradient link text3" href="book"><span>Book an Appointment</span></a>-->
