--- a/main/refer.html
+++ b/main/refer.html
@@ -1037,8 +1037,8 @@
                                                 </div>
                                             </div>
 
-                                            <div class="twingroup" style="border: 2px solid black">
-                                                <div class="twin-wrapper twin" style="border: 2px solid red">
+                                            <div class="twingroup">
+                                                <div class="twin-wrapper twin">
                                                     <p class="mt-3 textc reqstar">Investigation Required</p>
                                                     <div>
                                                         <input type="checkbox" name="echo" value="echo " class="qcheck" id="echocheck" data-parsley-multiple="investigationrequiredlink" data-parsley-error-message="At least 1 selection is required." />
@@ -1051,7 +1051,7 @@
                                                         <label for="consultcheck" class="textc">Consultation</label>
                                                     </div>
                                                 </div>
-                                                <div class="twin-wrapper twin hidden" style="border: 2px solid green">
+                                                <div class="twin-wrapper twin hidden">
                                                     <p class="mt-3 textc reqstar">Stress Echocardiography Criteria</p>
                                                     <div>
                                                         <input type="checkbox" name="blah1" value="blah1 " class="qcheck" id="blahcheck1" data-parsley-multiple="investigationrequiredlink1" data-parsley-error-message="At least 1 selection is required." />
