--- a/main/book2.html
+++ b/main/book2.html
@@ -141,7 +141,7 @@
                             <li class="menu-item purple"><a href="contact">General Enquiries</a></li>
                         </ol>
                     </li>
-                    <li class="menu-item dtmenuitem"><a href="refer" class="boldbtn">Refer a Patient</a></li>
+                    <li class="menu-item dtmenuitem"><a href="refer" class="boldbtn">Refer Online</a></li>
                     <!--<li class="menu-item dtmenuitem">
                         <a href="search">
                             <svg class="icon" viewBox="0 0 20 20" aria-label="Toggle search">
@@ -169,7 +169,7 @@
                         <li><a href="services/">Services</a></li>
                         <li><a href="locations/">Locations</a></li>
                         <li><a href="contact">Contact</a></li>
-                        <li><a href="refer">Practitioners</a></li>
+                        <li><a href="refer">Refer Patient</a></li>
                     </ul>
                 </nav>
             </div>
