--- a/main/index.html
+++ b/main/index.html
@@ -457,7 +457,7 @@
                         <!--<a class="mybtn1 mybtn1--gradient link text3" href="book"><span>Book an Appointment</span></a>-->
                     </div>
                     <div id="button1">
-                        <a class="mybtn link text3" href="tel:1800880770"><span>1800 880 770</span></a>
+                        <a class="mybtn link text3" style="margin-top: 1em !important" href="tel:1800880770"><span>1800 880 770</span></a>
                         <!--<a class="mybtn1 mybtn1--gradient link text3" href="book"><span>Book an Appointment</span></a>-->
                     </div>
                     <br>
