--- a/main/refer.html
+++ b/main/refer.html
@@ -1057,7 +1057,7 @@
                                                         <input type="checkbox" name="blah1" value="blah1 " class="qcheck" id="blahcheck1" data-parsley-multiple="investigationrequiredlink1" data-parsley-error-message="At least 1 selection is required." />
                                                         <label for="blahcheck1" class="textc">Chest discomfort or pains with exertion</label><br>
                                                         <input type="checkbox" name="blah2" value="blah2 " class="qcheck" id="blahcheck2" data-parsley-multiple="investigationrequiredlink1" data-parsley-mincheck="1" data-parsley-required data-parsley-error-message="Please choose at least 1" />
-                                                        <label for="blahcheck2" class="textc">Blah</label><br>
+                                                        <label for="blahcheck2" class="textc">Known CAD with ?progression of ischaemia</label><br>
                                                         <input type="checkbox" name="blah3" value="blah3 " class="qcheck" id="blahcheck3" data-parsley-multiple="investigationrequiredlink1" data-parsley-mincheck="1" data-parsley-required data-parsley-error-message="Please choose at least 1" />
                                                         <label for="blahcheck3" class="textc">Blah</label><br>
                                                         <input type="checkbox" name="blah4" value="blah4 " class="qcheck" id="blahcheck4" data-parsley-multiple="investigationrequiredlink1" data-parsley-mincheck="1" data-parsley-required data-parsley-error-message="Please choose at least 1" />
