--- a/main/refer.html
+++ b/main/refer.html
@@ -1061,7 +1061,7 @@
                                                         <input type="checkbox" name="blah3" value="blah3 " class="qcheck" id="blahcheck3" data-parsley-multiple="investigationrequiredlink1" data-parsley-mincheck="1" data-parsley-required data-parsley-error-message="Please choose at least 1" />
                                                         <label for="blahcheck3" class="textc">Exertional dyspnoea</label><br>
                                                         <input type="checkbox" name="blah4" value="blah4 " class="qcheck" id="blahcheck4" data-parsley-multiple="investigationrequiredlink1" data-parsley-mincheck="1" data-parsley-required data-parsley-error-message="Please choose at least 1" />
-                                                        <label for="blahcheck4" class="textc">Blah</label>
+                                                        <label for="blahcheck4" class="textc">Abnormal ECG suggestive of CAD</label>
                                                     </div>
                                                 </div>
                                             </div>
