--- a/main/refer.html
+++ b/main/refer.html
@@ -443,6 +443,12 @@
             border-right: 2px solid #eee;
             border-bottom: 2px solid #eee;
         }
+        
+        @media (min-width: 575.98px) {
+            .hidden {
+                margin-left: 3rem;
+            }
+        }
 
     </style>
     <title>Patient Referral | Melbourne Cardiology Services — Cardiac services with a focus on excellence, integrity &amp; quality.</title>
