--- a/main/refer.html
+++ b/main/refer.html
@@ -1044,7 +1044,7 @@
                                             </div>
 
                                             <div class="twingroup">
-                                                <div class="twin-wrapper twin">
+                                                <div class="twin-wrapper twin baseshown">
                                                     <p class="mt-3 textc reqstar">Investigation Required</p>
                                                     <div>
                                                         <input type="checkbox" name="echo" value="echo " class="qcheck" id="echocheck" data-parsley-multiple="investigationrequiredlink" data-parsley-error-message="At least 1 selection is required." />
