--- a/main/refer.html
+++ b/main/refer.html
@@ -448,6 +448,9 @@
             .hidden {
                 margin-left: 3rem;
             }
+            .baseshown {
+                margin-left: 3rem;
+            }
         }
 
     </style>
