--- a/main/refer.html
+++ b/main/refer.html
@@ -448,9 +448,9 @@
             .hidden {
                 margin-left: 3rem;
             }
-            .baseshown {
+            /*.baseshown {
                 margin-left: 3rem;
-            }
+            }*/
         }
 
     </style>
