--- a/main/refer.html
+++ b/main/refer.html
@@ -1063,8 +1063,8 @@
                                                 <div class="twin-wrapper twin hidden">
                                                     <p class="mt-3 textc reqstar">Stress Echocardiography Criteria</p>
                                                     <div>
-                                                        <input type="checkbox" name="blah1" value="blah1 " class="qcheck" id="blahcheck1" data-parsley-multiple="investigationrequiredlink1" data-parsley-error-message="At least 1 selection is required." />
-                                                        <label for="blahcheck1" class="textc">Chest discomfort or pains with exertion</label><br>
+                                                        <input type="checkbox" name="chestpain" value="chest pain " class="qcheck" id="chestpaincheck" data-parsley-multiple="investigationrequiredlink1" data-parsley-error-message="At least 1 selection is required." />
+                                                        <label for="chestpaincheck" class="textc">Chest discomfort or pains with exertion</label><br>
                                                         <input type="checkbox" name="blah2" value="blah2 " class="qcheck" id="blahcheck2" data-parsley-multiple="investigationrequiredlink1" data-parsley-mincheck="1" data-parsley-required data-parsley-error-message="Please choose at least 1" />
                                                         <label for="blahcheck2" class="textc">Known CAD with ?progression of ischaemia</label><br>
                                                         <input type="checkbox" name="blah3" value="blah3 " class="qcheck" id="blahcheck3" data-parsley-multiple="investigationrequiredlink1" data-parsley-mincheck="1" data-parsley-required data-parsley-error-message="Please choose at least 1" />
