--- a/main/refer.html
+++ b/main/refer.html
@@ -1065,8 +1065,8 @@
                                                     <div>
                                                         <input type="checkbox" name="chestpain" value="chest pain " class="qcheck" id="chestpaincheck" data-parsley-multiple="investigationrequiredlink1" data-parsley-error-message="At least 1 selection is required." />
                                                         <label for="chestpaincheck" class="textc">Chest discomfort or pains with exertion</label><br>
-                                                        <input type="checkbox" name="blah2" value="blah2 " class="qcheck" id="blahcheck2" data-parsley-multiple="investigationrequiredlink1" data-parsley-mincheck="1" data-parsley-required data-parsley-error-message="Please choose at least 1" />
-                                                        <label for="blahcheck2" class="textc">Known CAD with ?progression of ischaemia</label><br>
+                                                        <input type="checkbox" name="knowncad" value="known CAD " class="qcheck" id="knowncadcheck" data-parsley-multiple="investigationrequiredlink1" data-parsley-mincheck="1" data-parsley-required data-parsley-error-message="Please choose at least 1" />
+                                                        <label for="knowncadcheck" class="textc">Known CAD with ?progression of ischaemia</label><br>
                                                         <input type="checkbox" name="blah3" value="blah3 " class="qcheck" id="blahcheck3" data-parsley-multiple="investigationrequiredlink1" data-parsley-mincheck="1" data-parsley-required data-parsley-error-message="Please choose at least 1" />
                                                         <label for="blahcheck3" class="textc">Exertional dyspnoea</label><br>
                                                         <input type="checkbox" name="blah4" value="blah4 " class="qcheck" id="blahcheck4" data-parsley-multiple="investigationrequiredlink1" data-parsley-mincheck="1" data-parsley-required data-parsley-error-message="Please choose at least 1" />
