--- a/main/refer.html
+++ b/main/refer.html
@@ -1069,8 +1069,8 @@
                                                         <label for="knowncadcheck" class="textc">Known CAD with ?progression of ischaemia</label><br>
                                                         <input type="checkbox" name="exertionaldyspnoea" value="exertional dyspnoea " class="qcheck" id="exertionaldyspnoeacheck" data-parsley-multiple="investigationrequiredlink1" data-parsley-mincheck="1" data-parsley-required data-parsley-error-message="Please choose at least 1" />
                                                         <label for="exertionaldyspnoeacheck" class="textc">Exertional dyspnoea</label><br>
-                                                        <input type="checkbox" name="blah4" value="blah4 " class="qcheck" id="blahcheck4" data-parsley-multiple="investigationrequiredlink1" data-parsley-mincheck="1" data-parsley-required data-parsley-error-message="Please choose at least 1" />
-                                                        <label for="blahcheck4" class="textc">Abnormal ECG suggestive of CAD</label>
+                                                        <input type="checkbox" name="abnormalecg" value="abnormal ECG " class="qcheck" id="abnormalecgcheck" data-parsley-multiple="investigationrequiredlink1" data-parsley-mincheck="1" data-parsley-required data-parsley-error-message="Please choose at least 1" />
+                                                        <label for="abnormalecgcheck" class="textc">Abnormal ECG suggestive of CAD</label>
                                                     </div>
                                                 </div>
                                             </div>
