--- a/main/about.html
+++ b/main/about.html
@@ -719,7 +719,7 @@
                             His role as Deputy Director includes the education of Cardiology trainee doctors as well as Medical students from the University of Melbourne. He regularly participates in General Practitioner education programs.
                         </p>
                         <p class="text3 text11 mt-3">
-                            He is involved in both public and private practice. H1e consults at Melbourne Heart Institute (Moonee Ponds), the Epworth Hospital (Richmond), The Cardiologists (Epping), as well as Epping Specialist Centre – Northern Heart (Epping). He performs coronary angioplasty and stenting at the Northern Hospital and Epworth Hospital.
+                            He is involved in both public and private practice. He consults at Melbourne Heart Institute (Moonee Ponds), the Epworth Hospital (Richmond), The Cardiologists (Epping), as well as Epping Specialist Centre – Northern Heart (Epping). He performs coronary angioplasty and stenting at the Northern Hospital and Epworth Hospital.
                         </p>
                         <p class="text3 text11 mt-3">
                             Larry’s priority will always remain his patients. He is well known for his careful and meticulous approach to his cardiological procedures to achieve the optimal outcome and wellbeing for his patients. Patients invariably comment on his approachable manner and appreciate the time he takes to listen to their symptoms, concerns and fears.
