--- a/main/refer.html
+++ b/main/refer.html
@@ -547,8 +547,9 @@
         <div class="scrollContent ha-waypoint" data-animate-down="ha-header-shrink" data-animate-up="ha-header-show">
             <div class="heropurple">
                 <!--<img src="assets/img/Layer0.png" style="width: 100vw; height: 100%; z-index: -1; opacity: 0.25">-->
+                <img src="assets/img/logomark-final%20white.png" style="z-index: 1; opacity: 0.1; position: absolute; display: block; margin-left: auto; margin-right: auto; width: 700px; max-width: 100vw; overflow-x: hidden">
                 <div class="col-12">
-                    <h1 class="textb white herotitle" style="text-align: center; padding-top: 200px">Patient Referral</h1>
+                    <h1 class="textb white herotitle" style="text-align: center; padding-top: 200px; z-index: 2">Patient Referral</h1>
                 </div>
             </div>
             <div class="container-fluid feature row" style="background: var(--color-bg); margin-left: 0 !important; margin-right: 0 !important; padding-left: 0 !important; padding-right: 0 !important;">
@@ -1260,12 +1261,12 @@
                                             </div>
                                         </fieldset>
                                         <input type="hidden" value="" class="">
-                                        <div class="mt-3">
+                                        <div class="mt-5">
                                             <input type="checkbox" class="qcheck" id="drcheck" name="dr certification" value="yes" data-parsley-error-message=" This must be selected." required />
                                             <label for="drcheck" class="textc label reqstar">I certify that I am a registered Medical Practitioner</label>
                                         </div>
                                         <input type="text" name="_honey" style="display:none">
-                                        <button type="submit" class="boldbtn mt-3 py-3" style="border: none; width: 100%">Submit</button>
+                                        <button type="submit" class="boldbtn mt-5 py-3" style="border: none; width: 100%">Submit</button>
                                     </form>
                                 </div>
                             </div>
