--- a/main/refer.html
+++ b/main/refer.html
@@ -443,11 +443,12 @@
             border-right: 2px solid #eee;
             border-bottom: 2px solid #eee;
         }
-        
+
         @media (min-width: 575.98px) {
             .hidden {
                 margin-left: 3rem;
             }
+
             /*.baseshown {
                 margin-left: 3rem;
             }*/
@@ -547,9 +548,11 @@
         <div class="scrollContent ha-waypoint" data-animate-down="ha-header-shrink" data-animate-up="ha-header-show">
             <div class="heropurple">
                 <!--<img src="assets/img/Layer0.png" style="width: 100vw; height: 100%; z-index: -1; opacity: 0.25">-->
-                <img src="assets/img/logomark-final%20white.png" style="z-index: 1; opacity: 0.1; position: absolute; display: block; margin-left: auto; margin-right: auto; width: 700px; max-width: 100vw; overflow-x: hidden">
-                <div class="col-12">
-                    <h1 class="textb white herotitle" style="text-align: center; padding-top: 200px; z-index: 2">Patient Referral</h1>
+                <div style="width: 100%; height: 100%; position: relative; display: block; overflow: hidden">
+                    <img src="assets/img/logomark-final%20white.png" style="z-index: 1; opacity: 0.1; position: absolute; display: block; margin-left: auto; margin-right: auto; width: 700px; max-width: 100vw; overflow: hidden">
+                    <div class="col-12">
+                        <h1 class="textb white herotitle" style="text-align: center; padding-top: 200px; z-index: 2">Patient Referral</h1>
+                    </div>
                 </div>
             </div>
             <div class="container-fluid feature row" style="background: var(--color-bg); margin-left: 0 !important; margin-right: 0 !important; padding-left: 0 !important; padding-right: 0 !important;">
