--- a/main/refer.html
+++ b/main/refer.html
@@ -353,6 +353,11 @@
     <link rel="stylesheet" href="assets/fonts/toriga.css">
     <link rel="stylesheet" href="assets/fonts/vic.css">
     <style>
+        .content,
+        .scrollContent {
+            max-width: 100%;
+            overflow: hidden;
+        }
         .white {
             color: white !important;
         }
@@ -549,7 +554,7 @@
             <div class="heropurple">
                 <!--<img src="assets/img/Layer0.png" style="width: 100vw; height: 100%; z-index: -1; opacity: 0.25">-->
                 <div style="width: 100%; height: 100%; position: relative; display: block; overflow: hidden">
-                    <img src="assets/img/logomark-final%20white.png" style="z-index: 1; opacity: 0.1; position: absolute; display: block; margin-left: auto; margin-right: auto; width: 700px; max-width: 100vw; overflow: hidden">
+                    <img src="assets/img/logomark-final%20white.png" style="z-index: 1; opacity: 0.1; position: absolute; display: block; margin-left: auto; width: 700px; overflow: hidden">
                     <div class="col-12">
                         <h1 class="textb white herotitle" style="text-align: center; padding-top: 200px; z-index: 2">Patient Referral</h1>
                     </div>
