--- a/main/refer.html
+++ b/main/refer.html
@@ -549,7 +549,7 @@
             <div class="heropurple">
                 <!--<img src="assets/img/Layer0.png" style="width: 100vw; height: 100%; z-index: -1; opacity: 0.25">-->
                 <div style="width: 100%; height: 100%; position: relative; display: block; overflow: hidden">
-                    <img src="assets/img/logomark-final%20white.png" style="z-index: 1; opacity: 0.1; position: absolute; display: block; margin-left: auto; width: 700px; overflow: hidden">
+                    <img src="assets/img/logomark-final%20white.png" style="z-index: 1; opacity: 0.1; position: absolute; display: block; margin-left: -100px; width: 700px; overflow: hidden">
                     <div class="col-12">
                         <h1 class="textb white herotitle" style="text-align: center; padding-top: 200px; z-index: 2">Patient Referral</h1>
                     </div>
