--- a/main/index.html
+++ b/main/index.html
@@ -447,7 +447,7 @@
             <div id="mcshome">
                 <img src="assets/img/Layer0.png" style="width: 100vw; height: 100vh; z-index: -1; opacity: 0.25;">
                 <div style="border: 2px solid yellow; width: 100%; height: 100%; position: absolute; top: 0; display: block; overflow: hidden">
-                    <img src="assets/img/logomark-final%20white.png" style="z-index: 1; opacity: 0.1; position: absolute; display: block; right: 0;  margin-right: -100px; width: 700px; overflow: hidden">
+                    <img src="assets/img/logomark-final%20black.png" style="z-index: 1; opacity: 0.15; position: absolute; display: block; right: 0;  margin-right: -150px; bottom: 0; margin-bottom: -50px; width: 700px; overflow: hidden">
                 </div>
                 <div class="hometitle">
                     <span class="text">Melbourne Cardiology Services</span>
