--- a/main/index.html
+++ b/main/index.html
@@ -445,9 +445,9 @@
         </div>
         <div class="scrollContent ha-waypoint" data-animate-down="ha-header-shrink" data-animate-up="ha-header-show" style="background-color: var(--color-bg)">
             <div id="mcshome">
-                <img src="assets/img/Layer0.png" style="width: 100vw; height: 100vh; z-index: -1; opacity: 0.25;">
+                <img src="assets/img/Layer0.png" style="width: 100vw; height: 100vh; z-index: -1; opacity: 0.35;">
                 <div style="width: 100%; height: 100%; position: absolute; top: 0; display: block; overflow: hidden">
-                    <img src="assets/img/logomark-final%20black.png" style="z-index: 1; opacity: 0.15; position: absolute; display: block; right: 0;  margin-right: -150px; bottom: 0; margin-bottom: -50px; width: 700px; overflow: hidden">
+                    <img src="assets/img/logomark-final%20white.png" style="z-index: 1; opacity: 0.25; position: absolute; display: block; right: 0;  margin-right: -150px; bottom: 0; margin-bottom: -50px; width: 700px; overflow: hidden">
                 </div>
                 <div class="hometitle">
                     <span class="text">Melbourne Cardiology Services</span>
