--- a/main/book.html
+++ b/main/book.html
@@ -949,11 +949,11 @@
                                             <p class="text11 textc">NB. Not all services available at all locations.</p>
                                             <div>
                                                 <input type="radio" name="location" value="North Melbourne " class="" id="nmelbradio" data-parsley-multiple="loclink" data-parsley-error-message="1 selection is required." />
-                                                <label for="nmelbradio" class="textc">North Melbourne</label><br>
+                                                <label for="nmelbradio" class="textc">North Melbourne (Echocardiography & Holter Monitoring)</label><br>
                                                 <input type="radio" name="location" value="Moonee Ponds " class="" id="mpondsradio" data-parsley-multiple="loclink" data-parsley-required data-parsley-error-message="Please choose 1" />
-                                                <label for="mpondsradio" class="textc">Moonee Ponds</label><br>
+                                                <label for="mpondsradio" class="textc">Moonee Ponds (Stress Echocardiography)</label><br>
                                                 <input type="radio" name="location" value="Richmond " class="" id="richmondradio" data-parsley-multiple="loclink" data-parsley-required data-parsley-error-message="Please choose 1" />
-                                                <label for="richmondradio" class="textc">Richmond</label>
+                                                <label for="richmondradio" class="textc">Richmond (Echocardiography & Holter Monitoring)</label>
                                             </div>
 
                                             <div class="input-wrapper">
