--- a/main/book.html
+++ b/main/book.html
@@ -624,8 +624,11 @@
         <div class="scrollContent ha-waypoint" data-animate-down="ha-header-shrink" data-animate-up="ha-header-show" style="background-color: var(--color-bg)">
             <div class="heropurple">
                 <!--<img src="assets/img/Layer0.png" style="width: 100vw; height: 100%; z-index: -1; opacity: 0.25">-->
-                <div class="col-12">
-                    <h1 class="textb white herotitle" style="text-align: center; padding-top: 200px">Apointment Request</h1>
+                <div style="width: 100%; height: 100%; position: relative; display: block; overflow: hidden">
+                    <img src="assets/img/logomark-final%20white.png" style="z-index: 1; opacity: 0.1; position: absolute; display: block; margin-left: -100px; width: 700px; overflow: hidden">
+                    <div class="col-12">
+                        <h1 class="textb white herotitle" style="text-align: center; padding-top: 200px; z-index: 2">Apointment Request</h1>
+                    </div>
                 </div>
             </div>
             <div class="container-fluid feature row" style="margin-left: 0 !important; margin-right: 0 !important; padding-left: 0 !important; padding-right: 0 !important;">
