--- a/main/locations/epworth.html
+++ b/main/locations/epworth.html
@@ -570,7 +570,7 @@
                                         </p>
                                     </div>
                                     <div class="main-footer__colophon-nav text col-12 text-center justify-content-center" style="font-size: 12px">
-                                        <label class="dmode" style="font-size: 12px; vertical-align: middle; position: relative; display: inline-block;">Dark Mode
+                                        <label class="dmode" style="font-size: 12px; vertical-align: middle; position: relative; display: inline-block;">Light Mode
                                             <div class="switch">
                                                 <input class="switch__input" type="checkbox" id="themeSwitch">
                                                 <label aria-hidden="true" class="switch__label" for="themeSwitch">On</label>
