--- a/main/index.html
+++ b/main/index.html
@@ -449,7 +449,7 @@
                 <div style="width: 100%; height: 100%; position: absolute; top: 0; display: block; overflow: hidden">
                     <img src="assets/img/logomark-final%20white.png" style="z-index: 1; opacity: 0.25; position: absolute; display: block; right: 0;  margin-right: -150px; bottom: 0; margin-bottom: -50px; width: 700px; overflow: hidden">
                 </div>
-                <div class="hometitle">
+                <div class="hometitle" style="z-index: 2">
                     <span class="text">Melbourne Cardiology Services</span>
                     <br>
                     <br>
